tests/baselines/reference/parserComputedPropertyName11.errors.txt
parserComputedPropertyName11.ts(2,5): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName11.ts (1 errors) ====
    class C {
       [e]();
        ~
!!! error TS2304: Cannot find name 'e'.
    }